crates/alder-driver/src/snapshots/alder_driver__compile__tests__renders_unknown_builtin_member_without_color.snap
---
source: crates/alder-driver/src/compile.rs
description: "fn bad() { Array.missing([1]) }\n"
---
alder::canonicalize::unknown_name

  × unknown name `missing`
   ╭─[/project/src/main.ald:1:18]
 1 │ fn bad() { Array.missing([1]) }
   ·                  ───┬───
   ·                     ╰── reported here
   ╰────
