crates/alder-driver/src/snapshots/alder_driver__compile__tests__renders_unsatisfied_generic_bound_with_source.snap
---
source: crates/alder-driver/src/compile.rs
description: "trait Display[a] {\n    fn display(value: a) String\n}\n\nfn render(value: a) String {\n    display(value)\n}\n"
---
alder::trait::unsatisfied_bound

  × the generic contract does not provide `Display[a]`
   ╭─[/project/src/main.ald:6:5]
 5 │ fn render(value: a) String {
 6 │     display(value)
   ·     ───┬───
   ·        ╰── this use requires a bound
 7 │ }
   ╰────
  help: this operation requires `Display[a]` in the generic contract; an
        implementation method cannot require stronger bounds than its trait
        method
