crates/alder-driver/src/snapshots/alder_driver__compile__tests__renders_unused_invalid_result_alias_without_color.snap
---
source: crates/alder-driver/src/compile.rs
description: "pub type Invalid = Result[Number, String]\n"
---
alder::type::invalid_result_error_type

  × Result needs an error row, but this type is `String`
   ╭─[/project/src/main.ald:1:35]
 1 │ pub type Invalid = Result[Number, String]
   ·                                   ───┬──
   ·                                      ╰── this is not an error row or named error group
   ╰────
  help: use a tagged error row such as `[:failed(String)]`, or declare a named
        error group
