crates/alder-driver/src/snapshots/alder_driver__compile__tests__renders_warning_with_source.snap
---
source: crates/alder-driver/src/compile.rs
description: "fn main() {\n    let unused = 1\n    2\n}\n"
---
alder::warning::unused_binding

  ⚠ unused binding `unused`
   ╭─[/project/src/main.ald:2:9]
 1 │ fn main() {
 2 │     let unused = 1
   ·         ───┬──
   ·            ╰── not used
 3 │     2
   ╰────
  help: if this binding is intentionally unused, discard it with `_`; keep any
        initializer whose effects are needed
