crates/alder-driver/src/snapshots/alder_driver__compile__tests__source_and_stored_dependency_overlap_retains_local_ownership.snap
---
source: crates/alder-driver/src/compile.rs
description: "import @vendor/widgets/api.{ Token, Display }\nimpl Display[Token] {\n    fn display(value: Token) String { \"token\" }\n}\n"
---
alder::trait::overlapping_impl

  × overlapping implementations of `Display` are not allowed
   ╭─[/project/dependency/live.ald:2:1]
 1 │     import @vendor/widgets/api.{ Token, Display }
 2 │ ╭─▶ impl Display[Token] {
 3 │ │       fn display(value: Token) String { "token" }
 4 │ ├─▶ }
   · ╰──── this implementation overlaps one in another module
   ╰────
  help: remove one impl or introduce a distinct wrapper type; Alder has no
        specialization; the other implementation is in module `vendor/widgets/
        stored`
